src/test/resources/compilation_error/illegal_application_error_2.funcky
booleans: "funcky:booleans"
numbers: "funcky:numbers"

foo = numbers.add 1 booleans.false
